@@ -130,9 +130,9 @@ table .last{padding-right:0;}
 .box{margin-bottom:1.5em;background:#eee;padding:1.5em;}
 hr{background:#ddd;color:#ddd;clear:both;float:none;width:100%;height:.1em;border:none;margin:0 0 1.4em;}
 hr.space{background:#fff;color:#fff;}
-.clear{display:block;}
+.clear,.container{display:block;}
 .clear:after,.container:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
-* html .clear{height:1%;}
+* html .clear,* html .container{height:1%;}
 fieldset{border:1px solid #ccc;margin:0 0 1.5em;padding:1.4em;}
 legend{font-weight:700;font-size:1.2em;}
 input.text,input.title{width:300px;border:1px solid #bbb;background:#f6f6f6;margin:.5em .5em .5em 0;padding:5px;}
